# capstone

./: .env.example  .gitignore  CLAUDE.md  INSTALL.md  README.md  pyproject.toml
.claude/skills/: generate-report.md
Plan/: LLM_VULNERABILITY_DETECTION_RESEARCH_REPORT.md  PHASE1.md  PROJECT_OVERVIEW.md  RESEARCH_REPORT.md  gemini-research.md
Report/PPT/: KT.md  PPT.md
Report/Phase_1/: Chapter1.tex  Chapter2.tex  Chapter3.tex  Chapter4.tex  Chapter5.tex  appendix.tex  main.tex
Report/Phase_2/: .chapter_registry.md  Chapter1.tex  Chapter2.tex  Chapter3.tex  (+8 more)
benchmarks/: .gitignore  MANIFEST.md
configs/: cwe_weights.yaml  cwe_weights_calibrated.yaml  default.yaml  ground_truth.yaml
docs/: ARCHITECTURE.md  BUILD_GUIDE.md  CASCADE_ARCHITECTURE.md  CPU_LAPTOP_GUIDE.md  DATA_PIPELINE.md  GNN_ARCHITECTURE_ASSESSMENT.md  GNN_TRAINING_RESULTS.md  NOVEL_CONTRIBUTIONS.md  PROJECT_EVOLUTION.md  REPORT_WRITING_GUIDE.md  RESEARCH_BRIEF.md  SETUP_GUIDE.md  SYSTEM_DATA_MODEL.md  TECHNICAL_METRICS.md  UPGRADE_ANALYSIS.md  USER_MANUAL.md  demo.md  hehe.md  weekly_progress.md
notebooks/: Kaggle_output_1.ipynb  kaggle_train_gat.py  sec_c_gnn_training.ipynb  sec_c_gnn_training_v2.ipynb  sec_c_gnn_training_v3.ipynb  sec_c_gnn_training_v4.ipynb
sample_testcases/: manifest.yaml
scripts/: build_cwe_local.py  build_rag.py  calibrate_weights.py  download_juliet.py  fix_v2_notebook.py  gen_v3_notebook.py  generate_mock_dashboard.py  patch_v3_datasets.py  patch_v4_markdown.py  patch_v4_notebook.py  patch_v5_notebook.py  run_benchmarks.py  setup_codeql.sh  setup_joern.sh  setup_joern_docker.py  setup_rag.py  train_gat.py  update_nvd.py
tests/: conftest.py
(+228 files in other folders)
